--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -22,15 +22,12 @@
 body {
   margin: 0;
   padding: 0;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 
 /* NAVIGATION + HEADER */
 
 
 .navbar {
-  MAX-WIDTH: 1440PX;
   margin: 0 auto;
   position: fixed;
   top: 0;
@@ -49,7 +46,6 @@ body {
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  max-width: 1440px;
   width: 100%;
 }
 
@@ -157,22 +153,6 @@ nav ul a:hover {
   margin-top: -63px;
 }
 
-header,
-.main__container,
-.second__container,
-.third__container,
-.fourth__container,
-.fifth__container,
-.sixth__container,
-.seventh__container,
-.eight__container,
-.ninth__container,
-.tenth__container,
-.footer {
-  max-width: 1440px;
-  width: 100%;
-  margin: 0 auto;
-}
 
 .h1__main {
   font-family: "Montserrat";
@@ -684,6 +664,7 @@ header,
 
 .eight__container img {
   max-width: 100%;
+  background: url("assets/Images/eight__block.png") no-repeat center;
 }
 
 /* NINTH CONTAINER */
